--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="container">
-            <div class="display">12 + 25</div>
+            <div class="display">0</div>
             <div class="box">
                 <button>C</button>
                 <button>⌫</button>
